compiler/src/test/resources/golden/errors/unwrap_not_option.dawn
fn r() -> Result[Int, String] = Ok(1)

pub fn main() -> Unit !io = {
  println("${5!}")
  println("${r()!}")
}
