compiler/src/test/resources/golden/errors/unwrap_not_option.err
error: `!` needs an Option, got Int
  --> unwrap_not_option.dawn:4:14
  |
4 |   println("${5!}")
  |              ^^
  = hint: `!` unwraps an Option and panics on None; this value is not an Option
error: `!` needs an Option, got Result[Int, String]
  --> unwrap_not_option.dawn:5:14
  |
5 |   println("${r()!}")
  |              ^^^^
  = hint: `!` unwraps an Option; on a Result use `?` to propagate, or match the Ok/Err
